Fix z-index issues in mobile view

--- a/css/sm-civicrm.css
+++ b/css/sm-civicrm.css
@@ -8,6 +8,7 @@
   display: inline-block;
 	background-color: #333;
 	width: 100% !important;
+  z-index: 10000;
   height: auto;
 }
 #civicrm-menu a,
@@ -184,6 +185,9 @@ li#crm-qsearch ul {
 	.sm-civicrm ul ul ul {
 		background-color: #666;
 	}
+  .sm-civicrm li {
+    padding: 5px;
+  }
 	.sm-civicrm li a {
 		text-align: center;
 		font-size: 14px;
@@ -199,18 +203,28 @@ li#crm-qsearch ul {
   #civicrm-menu-nav {
     position: absolute;
     background: #222;
-    top: 0px;
+    top: 0;
     height: 35px;
-    z-index: 100000;
     width: 100%;
   }
   .main-menu-btn {
     margin-left: 20px;
+    z-index: 11000;
   }
   #civicrm-menu {
     margin-top: 30px;
   }
   #crm-qsearch {
     text-align: center;
+  }
+
+  /* Make sure we can click overlapped submenus in responsive mode */
+  #civicrm-menu li ul li {
+    z-index: 11000;
+    background-color: inherit;
+  }
+
+  #civicrm-menu li ul li.menu-separator {
+    margin: 0;
   }
 }
